--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Талнахская Христианская Церковь Виноградник</title>
+  <title>Церковь евангельских христиан "Виноградник"</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/uploads/logo.png">
+
 </head>
 <body>
   <app-root></app-root>
