--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,8 +6,9 @@
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Церковь Норильск"/>
+  <meta name="keywords" content="церковь в Норильске, церковь Талнах, церкви Норильск, церкви Талнах"/>
   <link rel="icon" type="image/x-icon" href="/uploads/logo.png">
-
 </head>
 <body>
   <app-root></app-root>
